--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "1.0.0-rc.6"
+version = "1.0.2"
 edition = "2024"
 rust-version = "1.91.0"
 license = "MIT OR Apache-2.0"
